@@ -5,6 +5,9 @@ WARNS   =	4
 
 MKC_REQD =	0.10.0
 
+check:
+	@: do something useful
+
 .include "../../libs/foo/linkme.mk"
 .include "../../libs/bar/linkme.mk"
 
