@@ -4,5 +4,8 @@ WARNS   =	4
 
 MKC_REQD =	0.10.0
 
+check:
+	@: do something useful
+
 .include "../../libs/qux/linkme.mk"
 .include <mkc.prog.mk>
